<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="24dp"
    android:paddingTop="23dp"
    android:paddingBottom="23dp"
    android:paddingRight="24dp">

    <ImageView
        android:id="@+id/heroItemImg"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_weight="0.6"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_weight="0.4"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/heroItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/heroItemHP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hp" />

            <TextView
                android:id="@+id/heroItemStrength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strength" />

            <TextView
                android:id="@+id/heroItemDef"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/def" />

            <TextView
                android:id="@+id/heroItemDex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dex" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvHP2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvStrength2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvDef2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvDex2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
