<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginEnd="0dp"
    android:layout_marginBottom="0dp"
    android:layout_weight="4"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.MenuFragment">

        <TextView
            android:id="@+id/blank1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=" "
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tvTitle"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/blank2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=" "
            android:textColor="@color/white"
            android:textSize="36sp" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_newgame"
            android:theme="@style/Button.Black" />

        <Button
            android:id="@+id/btnLoad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:text="@string/btn_load" />

        <TextView
            android:id="@+id/blank3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=" "
            android:textColor="@color/white"
            android:textSize="36sp" />
</LinearLayout>