<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".fragments.BattleFragment">

    <TableLayout
        android:layout_width="147dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="29dp"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvBtEHp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp" />

            <TextView
                android:id="@+id/tvBtEHp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/tvBtEDex1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dex" />

            <TextView
                android:id="@+id/tvBtEDex2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvBtEStr1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strength" />

            <TextView
                android:id="@+id/tvBtEStr2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/tvBtEDef1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/def" />

            <TextView
                android:id="@+id/tvBtEDef2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/ivHero"
        android:layout_width="195sp"
        android:layout_height="190sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/hero" />

    <ImageView
        android:id="@+id/ivEnemy"
        android:layout_width="195sp"
        android:layout_height="190sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="13dp"
        app:srcCompat="@drawable/enemy" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0sp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Button" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Button" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Button" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Button" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvHName"
        android:layout_width="195sp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ivHero"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0sp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="name" />

    <TextView
        android:id="@+id/tvEName"
        android:layout_width="195sp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ivEnemy"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="name" />

    <LinearLayout
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:layout_alignTop="@+id/ivHero"
        android:layout_marginStart="13dp"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="7dp"
        android:layout_toStartOf="@+id/ivEnemy"
        android:layout_toEndOf="@+id/ivHero"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMsg3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView" />

        <TextView
            android:id="@+id/tvMsg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView" />

        <TextView
            android:id="@+id/tvMsg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView" />
    </LinearLayout>

    <TableLayout
        android:layout_width="166dp"
        android:layout_height="45dp"
        android:layout_below="@+id/ivHero"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="0dp"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvBtHHp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp" />

            <TextView
                android:id="@+id/tvBtHHp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/tvBtHDex1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dex" />

            <TextView
                android:id="@+id/tvBtHDex2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvBtHStr1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strength" />

            <TextView
                android:id="@+id/tvBtHStr2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/tvBtHDef1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/def" />

            <TextView
                android:id="@+id/tvBtHDef2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />
        </TableRow>

    </TableLayout>

</RelativeLayout>